apps/pihole/base/pihole-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ingress
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pihole.thelemonsclan.com`) 
      services:
        - kind: Service
          name: pihole-web
          passHostHeader: true
          port: 80
